deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: movie-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        image: mihaelablazeska/kiii_proekt_213006:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 50
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 2
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 50
          timeoutSeconds: 10
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
