db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-db
  namespace: movie-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-db
  template:
    metadata:
      labels:
        app: post-db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: movie-db
  namespace: movie-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: post-db
