service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: movie-app
spec:
  type: NodePort
  selector:
    app: java-app
  ports:
    - port: 80           
      targetPort: 8080   
      nodePort: 30080    
      protocol: TCP
